# shapemaker

./: .gitignore  Cargo.toml  Justfile  README.md  README.md.in  fill-gallery.rb  landmarks.py  pyproject.toml  street.fish
.github/workflows/: deploy.yml
.ortfo/: description.md
.portfoliodb/: description.md  shape.xml  shapemaker.yaml
adapters/flstudio/: adapter.py
colorschemes/: afterglow.json  cra.json  palenight.css  palenight.json  snazzy-light.json
example/: main.rs
gallery/: smash.py
gallery/myriad/: generate
preview/: engine.js  index.html.hbs
research_flp/: flp_to_json.py  onset.flp  onset.json  pyproject.toml  tipping point.flp  tipping point.json
research_midi/: Cargo.toml  source.mid
research_midi/src/: main.rs
src/: anchors.rs  animation.rs  audio.rs  canvas.rs  cli.rs  color.rs  examples.rs  fill.rs  filter.rs  from_flp.rs  layer.rs  lib.rs  main.rs  midi.rs  objects.rs  point.rs  preview.rs  region.rs  sync.rs  transform.rs  ui.rs  video.rs  web.rs
src/audiosync/: stems.rs
stems_data/: anchor kick  bass  brokenup  ch  clap  flavor kick  glitchy percs  goup  hitting percs  perclap  powerful clap hit  powerful clap post  powerful clap pre  qanda  rimshot
transfem/: gen.fish
vst/: Cargo.toml  README.md  bundler.toml
vst/src/: lib.rs
web/: index.html
