[package]
name = "shapemaker"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.23"
docopt = "1.1.1"
hound = "3.5.0"
indicatif = "0.17.2"
itertools = "0.12.1"
midly = "0.5.3"
rand = "0.8.5"
serde = "1.0.147"
serde_cbor = "0.11.2"
serde_json = "1.0.91"
svg = "0.17.0"
chrono-human-duration = "0.1.1"
handlebars = "5.1.2"
tiny_http = "0.12.0"

[dev-dependencies]
rust-analyzer = "0.0.1"
