[package]
name = "shapemaker"
version = "1.1.0"
edition = "2021"
include = ["/src", "/web/index.html", "/preview"]
license = "AGPL-3.0"
homepage = "https://ewen.works/shapemaker"
repository = "https://github.com/ewen-lbh/shapemaker"
authors = ["Ewen Le Bihan <hey@ewen.works>"]
description = "An experimental WASM-capable, generative SVG-based video rendering engine that reacts to MIDI or audio data"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "shapemaker"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.23"
docopt = "1.1.1"
hound = "3.5.0"
indicatif = "0.17.2"
itertools = "0.12.1"
midly = "0.5.3"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.91"
svg = "0.17.0"
chrono-human-duration = "0.1.1"
handlebars = "5.1.2"
tiny_http = "0.12.0"
wasm-bindgen = "0.2.92"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.4", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
] }
once_cell = "1.19.0"
nanoid = "0.4.0"


[dev-dependencies]
rust-analyzer = "0.0.1"
