[tool.poetry]
name = "shapemaker-flstudio-adapter"
packages = [{ include = "adapters/flstudio", from = "." }]
version = "0.1.0"
description = ""
authors = ["Ewen Le Bihan <hey@ewen.works>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
flpinspect = "^0.1.0"
rich = "^13.7.0"
docopt = "^0.6.2"
pyflp = "^2.2.1"

[tool.poetry.scripts]
flp_to_json = "adapters.flstudio.adapter:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
